add Msg6 to protocol, integrate certs and keys into built jars